--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ mccabe==0.6.1
 oauthlib==3.0.1
 pep8==1.7.1
 Pillow==6.1.0
-psycopg2==2.7.5
+psycopg2
 pylint==2.1.1
 python3-openid==3.1.0
 pytz==2019.1
@@ -33,9 +33,9 @@ requests-oauthlib==1.2.0
 six==1.12.0
 sqlparse==0.3.0
 style==1.1.0
-typed-ast==1.4.0
+typed-ast
 update==0.0.1
-urllib3==1.24.3
+urllib3
 virtualenv==16.5.0
 whitenoise==4.1
-wrapt==1.11.1
+wrapt
